# dashboard-v3-plotly

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.uv  README.md  app.py  debug_cleanup_summary.md  main.py  oauth_status.py  pyproject.toml  railway.json  requirements.txt  test_api.py  test_oauth_callback.py
app/: auth.py  dashboard.py  products_db.py  tiny_oauth.py
